# HaloModel

./: Manifest.toml  Project.toml  main.py  pyproject.toml
halomodel/: gp.py  surface.py
src/: HaloModel.jl  convert.jl  cosmology.jl  gp.jl  halo.jl  model.jl  read_data.jl  test.jl
test/: runtests.jl
