[project]
name = "halomodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "juliacall>=0.9.26",
    "opencosmo==0.9.0b1",
    "pydtfe",
]


[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "cmake",
  "ninja",
  "pybind11"
]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
pydtfe = { git = "https://github.com/AstroPatty/SDTFE.git" }
